--- a/assets/homeStyle.css
+++ b/assets/homeStyle.css
@@ -69,7 +69,7 @@ section{
 }
 
 .btn:hover{
-    background:var(--blue);
+    background:radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%)
 }
 
 .heading{
@@ -77,12 +77,18 @@ section{
     margin:0 6rem;
     font-size: 4rem;
     padding:1rem;
-    border-bottom: .1rem solid #fff4;
+    border-bottom: .3rem solid rgba(93, 130, 172, 0.267);
     color:#fff;
 }
 
 .heading span{
-    color:var(--yellow);
+
+        background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        display: inline-block;
+    
 }
 
 header{
@@ -168,6 +174,15 @@ header .navbar ul li a:hover{
 }
 
 
+    .text-gradient {
+        background: linear-gradient(to right, #ff8a00 0%, #dd4c4f 100%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        display: inline-block;
+        font-size: 300%;
+      }
+
 .home h3{
     font-size: 2.7rem;
     color:#fff;
@@ -205,9 +220,18 @@ header .navbar ul li a:hover{
 
 .about .row .info h3{
     font-size: 2rem;
-    color:var(--yellow);
     padding:1rem 0;
+    /* color: var(--yellow); */
     font-weight: normal;
+}
+
+.about .row .info h3 b{
+        background: radial-gradient(circle, rgb(224, 225, 220) 0%, rgb(204, 213, 27) 100%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: larger;
+      
 }
 
 .about .row .info h3 span{
@@ -388,23 +412,6 @@ header .navbar ul li a:hover{
     z-index: 100;
     display: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* media queries  */
