--- a/assets/homeStyle.css
+++ b/assets/homeStyle.css
@@ -147,7 +147,7 @@ header .navbar ul li a{
 }
 
 header .navbar ul li a:hover{
-    background:var(--yellow);
+    background:radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
 
 #menu{
@@ -401,8 +401,12 @@ header .navbar ul li a:hover{
 }
 
 
-.contact .row .content .info h3 i:hover{
-    color: dodgerblue;
+.contact .row .content .info h3:hover{
+    background:radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 250%;
 }
 
 .top{
