--- a/assets/home.css
+++ b/assets/home.css
@@ -21,7 +21,8 @@
 }
 
 html{
-    font-size: 80.5%;
+    font: 110%/1.5 system-ui, sans-serif;
+    /* font-size: 80.5%; */
     overflow-x: hidden;
 }
 
@@ -42,7 +43,6 @@ html::-webkit-scrollbar-thumb{
 body{
     background:#111;
     background: #131417;
-
     overflow-x: hidden;
     padding-left: 35rem;
 }
