--- a/assets/home.css
+++ b/assets/home.css
@@ -247,7 +247,7 @@ header .navbar ul li a:hover{
 
 .about .row .counter .box{
     width:20rem;
-    background:#222;
+    background:hsl(246, 11%, 22%);;
     text-align: center;
     padding: 2rem;
     margin:2rem;
@@ -341,6 +341,7 @@ header .navbar ul li a:hover{
 }
 
 .contact .row{
+    background-image: linear-gradient(38.73deg, rgba(204, 0, 187, 0.25) 0%, rgba(201, 32, 184, 0) 50%), linear-gradient(141.27deg, rgba(0, 70, 209, 0) 50%, rgba(0, 70, 209, 0.25) 100%);
     display: flex;
     align-items: center;
     justify-content: center;
